--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://www.jetbrains.org/intellij/sdk/docs/reference_guide/intellij_artifacts.html
 
-pluginGroup = com.nbadal
+pluginGroup = com.tyrantkhan
 pluginName_ = ktlint
 pluginVersion = 0.11.0-tyrantkhan
 pluginSinceBuild = 193
